--- a/DMSDriver/DMSDriver/Resources/Storyboards/RentingOrder.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/RentingOrder.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JKA-J2-VhX">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="105.5" width="375" height="561.5"/>
                                 <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RentingOrderListTableViewCell" rowHeight="156" id="Dyv-V0-Pz0" customClass="RentingOrderListTableViewCell" customModule="Gadot_Dev" customModuleProvider="target">
@@ -168,6 +168,9 @@
                                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
+                                                                            <userDefinedRuntimeAttributes>
+                                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="ref-code"/>
+                                                                            </userDefinedRuntimeAttributes>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LxQ-tK-0wb">
                                                                             <rect key="frame" x="285.5" y="3" width="34.5" height="16"/>
@@ -193,6 +196,9 @@
                                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
+                                                                            <userDefinedRuntimeAttributes>
+                                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="customer-name"/>
+                                                                            </userDefinedRuntimeAttributes>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zah-fK-NBG">
                                                                             <rect key="frame" x="136" y="8.5" width="184" height="7"/>
@@ -221,7 +227,7 @@
                                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                             <userDefinedRuntimeAttributes>
-                                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="route-name"/>
+                                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="truck-type"/>
                                                                             </userDefinedRuntimeAttributes>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qUv-Vn-dbp">
@@ -284,12 +290,54 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mvY-Hm-vYy">
+                                <rect key="frame" x="0.0" y="20" width="375" height="85.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Renting Order" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="ea6-hh-xse">
+                                        <rect key="frame" x="30" y="10" width="315" height="35"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="30"/>
+                                        <color key="textColor" red="0.3411764706" green="0.45098039220000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGU-yb-G01">
+                                        <rect key="frame" x="30" y="49" width="223.5" height="16.5"/>
+                                        <string key="text">Here is your plan for today - 29 Sep
+
+</string>
+                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
+                                        <color key="textColor" red="0.3411764706" green="0.45098039220000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ai-FZ-jVd">
+                                        <rect key="frame" x="257.5" y="57.5" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
+                                        <color key="textColor" red="0.3411764706" green="0.45098039220000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ea6-hh-xse" firstAttribute="leading" secondItem="mvY-Hm-vYy" secondAttribute="leading" constant="30" id="GLZ-Bd-nkw"/>
+                                    <constraint firstItem="XGU-yb-G01" firstAttribute="top" secondItem="ea6-hh-xse" secondAttribute="bottom" constant="4" id="JvF-dC-JY6"/>
+                                    <constraint firstItem="ea6-hh-xse" firstAttribute="top" secondItem="mvY-Hm-vYy" secondAttribute="top" constant="10" id="Lt5-Q6-nfs"/>
+                                    <constraint firstAttribute="bottom" secondItem="XGU-yb-G01" secondAttribute="bottom" constant="20" id="MVS-vq-x27"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4ai-FZ-jVd" secondAttribute="trailing" constant="5" id="hfn-JD-QRg"/>
+                                    <constraint firstItem="4ai-FZ-jVd" firstAttribute="centerY" secondItem="XGU-yb-G01" secondAttribute="centerY" id="hnl-fE-Cf1"/>
+                                    <constraint firstItem="XGU-yb-G01" firstAttribute="leading" secondItem="ea6-hh-xse" secondAttribute="leading" id="i9X-XE-A9r"/>
+                                    <constraint firstAttribute="trailing" secondItem="ea6-hh-xse" secondAttribute="trailing" constant="30" id="nLU-Ae-VQo"/>
+                                    <constraint firstItem="4ai-FZ-jVd" firstAttribute="leading" secondItem="XGU-yb-G01" secondAttribute="trailing" constant="4" id="oey-2p-clO"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="wW3-Ci-VXt"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="JKA-J2-VhX" firstAttribute="leading" secondItem="kGg-b3-PfF" secondAttribute="leading" id="TMJ-HU-nQ7"/>
-                            <constraint firstItem="JKA-J2-VhX" firstAttribute="top" secondItem="kGg-b3-PfF" secondAttribute="top" id="Xpi-LI-MSZ"/>
+                            <constraint firstItem="kGg-b3-PfF" firstAttribute="trailing" secondItem="mvY-Hm-vYy" secondAttribute="trailing" id="Tc7-iz-7vd"/>
                             <constraint firstItem="kGg-b3-PfF" firstAttribute="bottom" secondItem="JKA-J2-VhX" secondAttribute="bottom" id="YNT-7p-p6f"/>
+                            <constraint firstItem="JKA-J2-VhX" firstAttribute="top" secondItem="mvY-Hm-vYy" secondAttribute="bottom" id="ZBS-ZS-HEA"/>
+                            <constraint firstItem="mvY-Hm-vYy" firstAttribute="top" secondItem="kGg-b3-PfF" secondAttribute="top" id="eia-2F-RqL"/>
+                            <constraint firstItem="mvY-Hm-vYy" firstAttribute="leading" secondItem="2M6-1N-aNq" secondAttribute="leading" id="fa5-jS-oHm"/>
                             <constraint firstItem="kGg-b3-PfF" firstAttribute="trailing" secondItem="JKA-J2-VhX" secondAttribute="trailing" id="hb1-3j-GPh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kGg-b3-PfF"/>
@@ -330,7 +378,7 @@
                                                             <color key="textColor" red="0.035294117649999998" green="0.1529411765" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                             <userDefinedRuntimeAttributes>
-                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="items"/>
+                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="maskToBounds" value="NO"/>
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38I-3o-4zZ">
@@ -341,6 +389,9 @@
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="maskToBounds" value="NO"/>
+                                                            </userDefinedRuntimeAttributes>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -382,6 +433,9 @@
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="maskToBounds" value="NO"/>
+                                                            </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5o-Zt-qgJ">
                                                             <rect key="frame" x="51" y="5" width="279" height="82"/>
