--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -2098,7 +2098,7 @@
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderDetailSKUCell" rowHeight="150" id="ZpE-r7-exf" customClass="OrderDetailSKUCell" customModule="Gadot_Dev" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="1132.5" width="375" height="150"/>
                                                 <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZpE-r7-exf" id="xlv-Z8-UoH">
+                                                <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZpE-r7-exf" id="xlv-Z8-UoH">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
@@ -2109,19 +2109,19 @@
                                                                     <rect key="frame" x="15" y="8" width="315" height="133.5"/>
                                                                     <subviews>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L87-oW-2Xo">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="22"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="52.5"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kwp-UR-jOF">
-                                                                                    <rect key="frame" x="0.0" y="3" width="37.5" height="16"/>
+                                                                                    <rect key="frame" x="0.0" y="18.5" width="37.5" height="16"/>
                                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                     <userDefinedRuntimeAttributes>
-                                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="name"/>
+                                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Name"/>
                                                                                     </userDefinedRuntimeAttributes>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UKr-c7-yci">
-                                                                                    <rect key="frame" x="47.5" y="0.0" width="267.5" height="22"/>
+                                                                                    <rect key="frame" x="47.5" y="15.5" width="267.5" height="22"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="dCg-8Z-rKn"/>
                                                                                     </constraints>
@@ -2134,14 +2134,14 @@
                                                                             <constraints>
                                                                                 <constraint firstItem="Kwp-UR-jOF" firstAttribute="centerY" secondItem="L87-oW-2Xo" secondAttribute="centerY" id="4Cm-Be-vrH"/>
                                                                                 <constraint firstItem="Kwp-UR-jOF" firstAttribute="leading" secondItem="L87-oW-2Xo" secondAttribute="leading" id="EXp-i4-gWc"/>
-                                                                                <constraint firstAttribute="height" constant="22" id="Gt3-Yx-CBg"/>
+                                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="Gt3-Yx-CBg"/>
                                                                                 <constraint firstItem="UKr-c7-yci" firstAttribute="centerY" secondItem="Kwp-UR-jOF" secondAttribute="centerY" id="VQa-uQ-YbH"/>
                                                                                 <constraint firstAttribute="trailing" secondItem="UKr-c7-yci" secondAttribute="trailing" id="wWx-TU-KaV"/>
                                                                                 <constraint firstItem="UKr-c7-yci" firstAttribute="leading" secondItem="Kwp-UR-jOF" secondAttribute="trailing" constant="10" id="yJI-Ok-ZXl"/>
                                                                             </constraints>
                                                                         </view>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jO2-Qg-Xpz">
-                                                                            <rect key="frame" x="0.0" y="26" width="315" height="22"/>
+                                                                            <rect key="frame" x="0.0" y="56.5" width="315" height="22"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BB4-9J-Vjw">
                                                                                     <rect key="frame" x="0.0" y="3" width="52.5" height="16"/>
@@ -2173,7 +2173,7 @@
                                                                             </constraints>
                                                                         </view>
                                                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a7i-Nc-D8i">
-                                                                            <rect key="frame" x="0.0" y="52" width="315" height="22"/>
+                                                                            <rect key="frame" x="0.0" y="82.5" width="315" height="22"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Loaded Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRt-3h-M2z">
                                                                                     <rect key="frame" x="0.0" y="3" width="103" height="16"/>
@@ -2205,10 +2205,10 @@
                                                                             </constraints>
                                                                         </view>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F8g-Bd-9fM">
-                                                                            <rect key="frame" x="0.0" y="78" width="315" height="55.5"/>
+                                                                            <rect key="frame" x="0.0" y="108.5" width="315" height="25"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Delivered Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqf-ke-mD0">
-                                                                                    <rect key="frame" x="0.0" y="20" width="115.5" height="16"/>
+                                                                                    <rect key="frame" x="0.0" y="4.5" width="115.5" height="16"/>
                                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                                     <nil key="highlightedColor"/>
@@ -2217,9 +2217,9 @@
                                                                                     </userDefinedRuntimeAttributes>
                                                                                 </label>
                                                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fXH-oi-aiv">
-                                                                                    <rect key="frame" x="242" y="15" width="80" height="26"/>
+                                                                                    <rect key="frame" x="242" y="0.5" width="80" height="24"/>
                                                                                     <constraints>
-                                                                                        <constraint firstAttribute="height" constant="26" id="WTs-lH-gUm"/>
+                                                                                        <constraint firstAttribute="height" constant="24" id="WTs-lH-gUm"/>
                                                                                         <constraint firstAttribute="width" constant="80" id="mFq-or-tPK"/>
                                                                                     </constraints>
                                                                                     <nil key="textColor"/>
@@ -2230,7 +2230,7 @@
                                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <constraints>
                                                                                 <constraint firstItem="fqf-ke-mD0" firstAttribute="centerY" secondItem="F8g-Bd-9fM" secondAttribute="centerY" id="4Rj-B8-NF8"/>
-                                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="6Fd-7u-ZU9"/>
+                                                                                <constraint firstAttribute="height" constant="25" id="6Fd-7u-ZU9"/>
                                                                                 <constraint firstItem="fqf-ke-mD0" firstAttribute="leading" secondItem="F8g-Bd-9fM" secondAttribute="leading" id="TNR-v1-Af4"/>
                                                                                 <constraint firstItem="fXH-oi-aiv" firstAttribute="centerY" secondItem="fqf-ke-mD0" secondAttribute="centerY" id="esF-oL-o6N"/>
                                                                                 <constraint firstAttribute="trailing" secondItem="fXH-oi-aiv" secondAttribute="trailing" constant="-7" id="tsP-Mq-0mU"/>
@@ -2272,7 +2272,10 @@
                                                 </tableViewCellContentView>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <connections>
+                                                    <outlet property="deliveredQtyHeightConstraint" destination="6Fd-7u-ZU9" id="shO-Fw-qkJ"/>
+                                                    <outlet property="deliveredQtyStaticLabel" destination="fqf-ke-mD0" id="OeX-fO-3yL"/>
                                                     <outlet property="deliveredQtyTextField" destination="fXH-oi-aiv" id="Nwb-BI-XCY"/>
+                                                    <outlet property="deliveredQtyViewContainer" destination="F8g-Bd-9fM" id="leg-ff-1eb"/>
                                                     <outlet property="loadedQtyHeightConstraint" destination="2rW-ut-SKJ" id="ukm-Av-44s"/>
                                                     <outlet property="loadedQtyLabel" destination="kkR-hT-Ibw" id="NRk-hu-qKk"/>
                                                     <outlet property="loadedQtyViewContainer" destination="a7i-Nc-D8i" id="2GU-VK-Jtd"/>
